# scippnexus

./: .buildinfo  .copier-answers.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  output.txt  pyproject.toml  pyproject.toml.rej  requirements-docs.in  requirements-docs.txt  search.html  searchindex.js  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  docs-next.yml  docs.yml  nightly_at_main.yml  nightly_at_release.yml  release.yml  test.yml  update-scipp.yml
_modules/: index.html  types.html  typing.html
_modules/scippnexus/: _cache.html  _load.html  attrs.html  base.html  field.html  file.html  nexus_classes.html  nxcylindrical_geometry.html  nxdata.html  nxdetector.html  nxevent_data.html  nxlog.html  nxmonitor.html  nxoff_geometry.html  nxsample.html  nxtransformations.html  typing.html
_sources/: index.md
_sources/about/: index.md
_sources/developer/: dependency-management.md
_sources/user-guide/: application-definitions.ipynb  nexus-classes.ipynb  quick-start-guide.ipynb
_static/: documentation_options.js
about/: about.html  index.html  release-notes.html
api-reference/: index.html
conda/: meta.yaml  meta.yaml.rej
developer/: coding-conventions.html  dependency-management.html  getting-started.html  index.html
docs/: conf.py  conf.py.rej  index.md  index.rst  version.py
docs/_templates/: doc_version.html
docs/_templates/sections/: header-article.html
docs/_templates/topbar/: launchbuttons.html
docs/about/: about.rst  index.md  release-notes.rst
docs/api-reference/: index.md
docs/getting-started/: installation.rst  quick-start-guide.ipynb
docs/user-guide/: application-definitions.ipynb  classes.rst  functions.rst  index.md  installation.md  nexus-classes.ipynb  quick-start-guide.ipynb  test.nxs
getting-started/: installation.html  quick-start-guide.html
release/0.0.2/: index.html  output.json  scipp-class-template.html  searchindex.js
release/0.0.3/: .buildinfo  index.html  objects.inv  output.json  searchindex.js
release/0.0.4/: genindex.html  index.html  output.json  scipp-module-template.html  search.html  searchindex.js
release/0.0.5/: genindex.html  index.html  objects.inv  output.json  search.html  searchindex.js
release/0.0.5/_sources/: index.rst
release/0.0.6/: genindex.html  index.html  output.json  search.html  searchindex.js
release/0.0.6/getting-started/: installation.html  quick-start-guide.html
release/0.0.6/user-guide/: classes.html  nexus-classes.html
release/0.0.7/: genindex.html  index.html  objects.inv  output.json  output.txt  searchindex.js
release/0.0.7/getting-started/: quick-start-guide.html
release/0.0.7/user-guide/: classes.html  nexus-classes.html
release/0.0.8/: genindex.html  output.json  searchindex.js
release/0.0.8/getting-started/: installation.html  quick-start-guide.html
release/0.0.8/user-guide/: classes.html  nexus-classes.html
release/0.0.9/: objects.inv  output.json  search.html  searchindex.js
release/0.0.9/getting-started/: quick-start-guide.html
release/0.0.9/user-guide/: classes.html  nexus-classes.html
release/0.1.0/: output.json  searchindex.js
release/0.1.0/about/: release-notes.html
release/0.1.0/getting-started/: quick-start-guide.html
release/0.1.0/user-guide/: classes.html  nexus-classes.html
release/0.1.1/: index.html  output.txt  search.html  searchindex.js
release/0.1.1/about/: about.html
release/0.1.1/getting-started/: quick-start-guide.html
release/0.1.1/user-guide/: nexus-classes.html
release/0.1.2/: genindex.html  objects.inv  output.txt  searchindex.js
release/0.1.2/getting-started/: installation.html  quick-start-guide.html
release/0.1.2/user-guide/: nexus-classes.html
release/0.1.3/: genindex.html  objects.inv  output.txt  searchindex.js
release/0.1.3/_sources/: index.rst
release/0.1.3/about/: release-notes.html
release/0.1.3/getting-started/: quick-start-guide.html
release/0.1.3/user-guide/: classes.html  nexus-classes.html
release/0.1.4/: .buildinfo  index.html  output.txt  search.html
release/0.1.4/about/: about.html
release/0.1.4/getting-started/: installation.html  quick-start-guide.html
release/0.1.4/user-guide/: nexus-classes.html
requirements/: base.in  base.in.rej  base.txt  basetest.in  basetest.txt  ci.in  ci.txt  dev.txt  docs.in  docs.txt  mypy.txt  nightly.in  nightly.txt  requirements-docs.in  static.txt  test-highest.in  test-highest.txt  test-latest.in  test-latest.txt  test-lowest.in  test-lowest.txt  test.txt  wheels.txt
requirements-lowest/: test-lowest.txt
src/scippnexus/: __init__.py  _cache.py  _common.py  _hdf5_nexus.py  _load.py  _string.py  attrs.py  base.py  collections.py  definition.py  event_field.py  field.py  file.py  leaf.py  loader.py  metadata.py  nexus_classes.py  nx2.py  nxcylindrical_geometry.py  nxdata.py  nxdetector.py  nxdisk_chopper.py  nxevent_data.py  nxevent_data2.py  nxfermi_chopper.py  nxlog.py  nxmonitor.py  nxobject.py  nxoff_geometry.py  nxsample.py  nxsource.py  nxtransformations.py  transformations.py  typing.py
src/scippnexus/data/: __init__.py
src/scippnexus/definitions/: nxcansas.py
src/scippnexus/docs/: our-interpretation-of-the-nexus-format.md
src/scippnexus/v1/: __init__.py  file.py  leaf.py  nxcylindrical_geometry.py  nxdata.py  nxdetector.py  nxevent_data.py  nxfermi_chopper.py  nxobject.py  nxoff_geometry.py  nxsample.py  nxsource.py  nxtransformations.py  ruff.toml
tests/: application_definition_test.py  conftest.py  externalfile.py  file_test.py  load_files_test.py  load_test.py  loader_test.py  nexus_test.py  nx2_test.py  nxcylindrical_geometry_test.py  nxdata_test.py  nxdetector_test.py  nxevent_data_test.py  nxlog_test.py  nxmonitor_test.py  nxoff_geometry_test.py  nxsample_test.py  nxtransformations_test.py  package_test.py  transform_test.py  transformations_test.py
user-guide/: application-definitions.html  classes.html  index.html  installation.html  nexus-classes.html  quick-start-guide.html
(+22 files in other folders)
