[build-system]
requires = [
  "setuptools>=42",
  "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "-ra -v"
testpaths = "tests"
filterwarnings = [
  "error",
  "ignore::UserWarning",
]

[tool.bandit]
# Excluding tests because bandit doesn't like `assert`.
exclude_dirs = ["docs/conf.py", "tests"]

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
