[build-system]
requires = [
  "setuptools>=68",
  "setuptools_scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "scippnexus"
description = "An h5py-like utility for NeXus files with seamless Scipp integration"
authors = [{ name = "Scipp contributors" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.8"

# IMPORTANT:
# Run 'tox -e deps' after making changes here. This will update requirement files.
# Make sure to list one dependency per line.
dependencies = [
    "python-dateutil",
    "scipp>=23.07.0",
    "scipy",
    "h5py",
]

dynamic = ["version"]

[project.urls]
"Bug Tracker" = "https://github.com/scipp/scippnexus/issues"
"Documentation" = "https://scipp.github.io/scippnexus"
"Source" = "https://github.com/scipp/scippnexus"

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "7.0"
# The custom `externalfile` marker runs tests that require passwordless
# SSH access to login.esss.dk. We do not run it by default. Make sure to
# setup keys in your SSH agent before running `pytest -m externalfile`.
addopts = "-ra -v --strict-markers -m 'not externalfile'"
testpaths = "tests"
filterwarnings = [
  "error",
  "ignore:Failed to load :UserWarning",
]
markers = [
    "externalfile",
]

[tool.bandit]
# Excluding tests because bandit doesn't like `assert`.
exclude_dirs = ["docs/conf.py", "tests"]

[tool.black]
skip-string-normalization = true

[tool.isort]
skip_gitignore = true
profile = "black"
known_first_party = ["scippnexus"]

[tool.mypy]
strict = true
ignore_missing_imports = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
show_error_codes = true
warn_unreachable = true
