[metadata]
name = scippnexus
author = Scipp contributors (https://github.com/scipp)
description = h5py-like utility for NeXus files based with seamless scipp integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://scipp.github.io/scippnexus
project_urls =
    Bug Tracker = https://github.com/scipp/scippnexus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    scipp>=0.12
    h5py
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
scippnexus = py.typed

[flake8]
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
extend-ignore = E203

[yapf]
based_on_style = pep8
column_limit = 88
