[metadata]
name = scippnexus
author = Scipp contributors (https://github.com/scipp)
description = h5py-like utility for NeXus files based with seamless scipp integration
license = BSD
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://scipp.github.io/scippnexus
project_urls =
    Bug Tracker = https://github.com/scipp/scippnexus/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    python-dateutil
    scipp>=23.07.0
    scipy  # we use scipp.interpolate which depends on this
    h5py
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
scippnexus = py.typed

[flake8]
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
extend-ignore = E203
